--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -67,29 +67,59 @@
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
 }
-.rightActionIcon {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 45px;
-  float: right;
-  li {
-    list-style: none;
-    margin: 0 0 5px 0;
-    padding: 0;
-    background: $color-white;
-    font-size: 1.5rem;
-    border-radius: 7px 0 0 7px;
-    text-align: center;
-    width: 45px;
-    line-height: 45px;
-    height: 45px;
-    /* float: right; */
-    display: block;
-    &:hover {
-      color: $color-white;
-      background: $primary-color;
-      cursor: pointer;
+.basicSubjective {
+  #Finalintial_icd {
+    .ReactTable {
+      max-height: 20vh !important;
     }
   }
+}
+.algaeh-col-3 {
+  width: 25%;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.algaeh-col-8 {
+  width: calc(73% - 65px);
+  margin-right: 10px;
+}
+.algaeh-fixed-right-menu {
+  position: relative;
+  width: 45px;
+  .rightActionIcon {
+    position: fixed;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 45px;
+    float: right;
+    right: 0;
+    li {
+      list-style: none;
+      margin: 0 0 5px 0;
+      padding: 0;
+      background: $color-white;
+      font-size: 1.5rem;
+      border-radius: 7px 0 0 7px;
+      text-align: center;
+      width: 45px;
+      line-height: 45px;
+      height: 45px;
+      /* float: right; */
+      display: block;
+      &:hover {
+        color: $color-white;
+        background: $primary-color;
+        cursor: pointer;
+      }
+      i {
+        color: lighten($color-black, 50%);
+      }
+    }
+  }
+}
+
+.toggleBorder {
+  border-bottom: 1px solid lighten($color-black, 80%);
+  margin-top: 10px;
 }
