--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
@@ -24,7 +24,8 @@
   }
   #doctorOrder {
     .ReactTable {
-      height: 30vh !important;
+      height: 27vh !important;
+      margin-bottom: 15px;
     }
   }
 }
