--- a/client/src/Components/PatientProfile/Subjective/subjective.css
+++ b/client/src/Components/PatientProfile/Subjective/subjective.css
@@ -93,6 +93,8 @@
         cursor: pointer; }
       .algaeh-fixed-right-menu .rightActionIcon li i {
         color: gray; }
+        .algaeh-fixed-right-menu .rightActionIcon li i:hover {
+          color: #fff; }
 
 .toggleBorder {
   border-bottom: 1px solid #cccccc;
