--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -114,6 +114,9 @@
       }
       i {
         color: lighten($color-black, 50%);
+        &:hover {
+          color: $color-white;
+        }
       }
     }
   }
