changes in UCAF

--- a/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
@@ -1,13 +1,19 @@
+<head>
+    <style>
+        .imclass {
+            background-color: bisque
+        }
+    </style>
+</head>
 <table class="UCAF20_Report">
     <tr>
         <th colspan="6">
-            <h4>UCAF 2.0</h4>
+            <h4 class="imclass">UCAF 2.0</h4>
         </th>
     </tr>
     <tr>
         <td colspan="5">To be completed by the reception/nurse</td>
-        <td rowspan="7"><img src="https://qph.fs.quoracdn.net/main-qimg-fa8ca55b5fc69716c7d86e4c2e00ad2f"
-                height="200" /></td>
+        <td rowspan="7"><img src="./report_assets/hospital_logo_reports.webp" height="200" /></td>
     </tr>
     <tr>
         <td><label>Provider Name</label></td>
