--- a/AlgaehReporting/algaeh_report_tool/templates/reportHeader.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/reportHeader.hbs
@@ -6,6 +6,6 @@
     <p>Date:{{currentDateTime ''}}</p>
 </div>
 <div class="hospitalAddress">
-    <h4>Report name</h4>
-    <p>Hospital name</p>
+    <h4>{{{report_name_for_header}}}</h4>
+    <p>{{hospital_address}}</p>
 </div>
