dcaf 2.0 report added

--- a/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
@@ -112,8 +112,9 @@
                                         <span>{{insurance.0.primary_tpa_insurance_company_name}}</span></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="3">Patient File Number: <span>{{header.patient_code}}</td>
-                                    <td colspan="2">Dept: <span>{{header.sub_department_name}}</td>
+
+                                    <td colspan="3">Patient File Number: <span>{{header.patient_code}}</span></td>
+                                    <td colspan="2">Dept: <span>{{header.sub_department_name}}</span></td>
                                 </tr>
                                 <tr>
                                     <td colspan="1">Single ( {{#if header.patient_marital_status "Single" }}
