--- a/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
@@ -7,7 +7,7 @@
             padding: 0;
             margin: 0;
             font-family: sans-serif;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
         }
 
         .report-container {
@@ -27,7 +27,7 @@
 
         .mainTable>tbody tr td {
             text-align: left;
-            padding: 5px;
+            padding: 2px;
 
         }
 
@@ -36,7 +36,7 @@
         }
 
         .patientDetails .innerTable {
-            height: 260px;
+            height: 220px;
         }
 
         .insuranceDetails {
@@ -44,7 +44,7 @@
         }
 
         .insuranceDetails .innerTable {
-            height: 260px;
+            height: 220px;
         }
 
         .otherDetails {
@@ -53,12 +53,12 @@
 
         .innerTable {
             border: 2px solid #000;
-            padding: 10px;
+            padding: 2px;
         }
 
         .innerTable tbody tr td {
             border: none;
-            padding: 5px;
+            padding: 2px;
         }
 
         .innerTable tbody tr td span {
@@ -72,13 +72,13 @@
         .servicetable thead tr th {
             border: 1px solid #000;
             text-align: center;
-            padding: 3px;
+            padding: 2px;
         }
 
         .servicetable tbody tr td {
             border: 1px solid #000;
             text-align: center;
-            padding: 3px;
+            padding: 2px;
         }
     </style>
 </head>
@@ -204,13 +204,13 @@
                                         <span>&#10004;</span>
                                         {{/if}}
                                         )</td>
-                                    <td>Emergency Case ( {{#if header.patient_emergency_case ""}}
+                                    <td colspan="2">Emergency Case ( {{#if header.patient_emergency_case ""}}
                                         <span></span>
                                         {{else}}
                                         <span>&#10004;</span>
                                         {{/if}}
                                         )</td>
-                                    <td colspan="4">Emergency Care Level 1( {{#if header.patient_emergency_case "L1"}}
+                                    <td colspan="3">Emergency Care Level 1( {{#if header.patient_emergency_case "L1"}}
                                         <span>&#10004;</span>
                                         {{/if}}
                                         ) | 2( {{#if header.patient_emergency_case "L2"}}
