--- a/client/src/index.css
+++ b/client/src/index.css
@@ -847,6 +847,18 @@
     :global .cashReciptStyles .table-report .table tbody td:nth-child(4) {
       color: #696969;
       text-transform: none; }
+    :global .cashReciptStyles .table-report .tableEye tbody td {
+      text-align: center;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: #00dac4;
+      border: none; }
+    :global .cashReciptStyles .table-report .tableEye tbody td:first-child {
+      color: #696969;
+      text-transform: none; }
+    :global .cashReciptStyles .table-report .tableEye tbody td:nth-child(4) {
+      color: #696969;
+      text-transform: none; }
   :global .cashReciptStyles .text-danger strong {
     color: #9f181c; }
   :global .cashReciptStyles .receipt-header-mid {
