--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -922,17 +922,6 @@ input.autoselect-input:disabled {
     border-bottom: 1.5px solid #f2f2f2;
     margin: 0;
     thead {
-      // position: fixed;
-      // top: 50px;
-      // left: 0;
-      // right: 0;
-      // width: 100%;
-      // height: 50px;
-      // line-height: 3em;
-      // background: #eee;
-      // table-layout: fixed;
-      // display: table;
-
       tr {
         th {
           border-bottom: 2px solid #34b8bc !important;
@@ -1272,10 +1261,9 @@ th {
 
         tr {
           th {
-            border-bottom: 2px solid #34b8bc !important;
+            border-bottom: 2px solid $primary-color !important;
             vertical-align: middle !important;
-            background: #e8feff !important;
-
+            background: lighten($primary-color, 60%);
             text-transform: uppercase;
             text-align: center;
             label.style_Label {
@@ -1823,4 +1811,8 @@ th {
   .CurrentDate {
     border-top: 2px solid yellow !important;
   }
+}
+
+.trHighlight {
+  background: lighten($color-black, 90%);
 }
