diagram bug fix

--- a/AlgaehReporting/algaeh_report_tool/templates/doctor_signature_footer.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/doctor_signature_footer.hbs
@@ -1,9 +1,9 @@
 <div class="signatureDiv">
     <p>Signature:</p>
 </div>
-<div class="hospitalSeal"><img src="" /></div>
+<div class="hospitalSeal"><img src="{{imageSource 'images/seal-stamp.webp'}}" /></div>
 <div class="doctorName">
-    <h6>Doctor Name : {{full_name}}</h6>
-    <p>data.department data.department </p>
-    <p>Registration: DCT45736487</p>
+    <p>Doctor Name : {{full_name}}</p>
+    <p>Department : {{sub_department_name}} </p>
+    <p>Registration : {{license_number}}</p>
 </div>
