--- a/client/src/Components/StaffCashCollection/StaffCashCollection.css
+++ b/client/src/Components/StaffCashCollection/StaffCashCollection.css
@@ -2,3 +2,33 @@
   width: 98vw !important; }
   .staffCashCollection #staffCashCollectionGrid_Cntr .ReactTable {
     max-height: 30vh !important; }
+
+.staffCashCollection .ulShiftList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border: 1px solid #d6d6d6;
+  border-radius: 5px;
+  max-height: 23.3vh;
+  overflow: auto; }
+  .staffCashCollection .ulShiftList li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    cursor: pointer; }
+    .staffCashCollection .ulShiftList li span {
+      padding: 5px;
+      border-bottom: 1px solid #d6d6d6;
+      display: block; }
+      .staffCashCollection .ulShiftList li span small {
+        float: right;
+        background: #00a796;
+        color: #fff;
+        text-align: center;
+        padding: 2px;
+        width: 20px;
+        border-radius: 10px; }
+      .staffCashCollection .ulShiftList li span:hover {
+        background: #ccc; }
+    .staffCashCollection .ulShiftList li:last-child span {
+      border-bottom: none; }
