Added Dental Image

--- a/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
@@ -270,7 +270,7 @@
                                         </table>
                                     </td>
                                     <td style="width: 30%">
-                                        Dental Picture Here
+                                        <img src="{{imageSource 'images/dcaf_Dental_chart'}}" />
                                     </td>
                                 </tr>
                             </tbody>
