--- a/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
@@ -2,85 +2,7 @@
 <html lang="en">
 
 <head>
-    <style type="text/css">
-        body {
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-            font-size: 0.9rem;
-        }
-
-        .report-container {
-            height: auto;
-            margin: auto;
-        }
-
-        .mainTable,
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        .mainTable>thead tr th {
-            text-align: center;
-        }
-
-        .mainTable>tbody tr td {
-            text-align: left;
-            padding: 5px;
-
-        }
-
-        .patientDetails {
-            width: 55%;
-        }
-
-        .patientDetails .innerTable {
-            height: 260px;
-        }
-
-        .insuranceDetails {
-            width: 45%;
-        }
-
-        .insuranceDetails .innerTable {
-            height: 260px;
-        }
-
-        .otherDetails {
-            width: 100%;
-        }
-
-        .innerTable {
-            border: 2px solid #000;
-            padding: 10px;
-        }
-
-        .innerTable tbody tr td {
-            border: none;
-            padding: 5px;
-        }
-
-        .innerTable tbody tr td span {
-            border-bottom: 1px dotted #000;
-        }
-
-        .servicetable {
-            margin: 10px 0;
-        }
-
-        .servicetable thead tr th {
-            border: 1px solid #000;
-            text-align: center;
-            padding: 3px;
-        }
-
-        .servicetable tbody tr td {
-            border: 1px solid #000;
-            text-align: center;
-            padding: 3px;
-        }
-    </style>
+    {{{importStyle 'css/ucaf.css'}}}
 </head>
 
 <body>
