Staff Collection UI Changes

--- a/client/src/Components/StaffCashCollection/StaffCashCollection.css
+++ b/client/src/Components/StaffCashCollection/StaffCashCollection.css
@@ -32,3 +32,9 @@
         background: #ccc; }
     .staffCashCollection .ulShiftList li:last-child span {
       border-bottom: none; }
+  .staffCashCollection .ulShiftList .noDataStyle {
+    padding: 20px !important;
+    display: inline-block !important;
+    text-align: center !important;
+    width: 100% !important;
+    color: lightgray !important; }
