--- a/client/src/Components/StaffCashCollection/StaffCashCollection.scss
+++ b/client/src/Components/StaffCashCollection/StaffCashCollection.scss
@@ -41,5 +41,13 @@
         }
       }
     }
+
+    .noDataStyle {
+      padding: 20px !important;
+      display: inline-block !important;
+      text-align: center !important;
+      width: 100% !important;
+      color: lightgray !important;
+    }
   }
 }
