--- a/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/ucaf.hbs
@@ -29,9 +29,9 @@
                                 </tr>
                                 <tr>
                                     <td colspan="3">Insurance Company Name:
-                                        <span>{{insurance.0.primary_insurance_company_name}}</span></td>
+                                        <span>{{firstElement insurance 0 "primary_insurance_company_name"}}</span></td>
                                     <td colspan="2">TPA Company Name:
-                                        <span>{{insurance.0.primary_tpa_insurance_company_name}}</span></td>
+                                        <span>{{firstElement insurance 0 "primary_tpa_insurance_company_name"}}</span></td>
                                 </tr>
                                 <tr>
                                     <td colspan="3">Patient File Number: <span>{{header.patient_code}}</span></td>
@@ -77,24 +77,24 @@
                                 </tr>
                                 <tr>
                                     <td colspan="3">Insured Name:
-                                        <span>{{insurance.0.primary_insurance_company_name}}</span></td>
+                                        <span>{{firstElement insurance 0 "primary_insurance_company_name"}}</span></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="">ID.Card No.: <span>{{insurance.0.primary_card_number}}</span></td>
-                                    <td colspan="">Sex: <span>{{insurance.0.sex}}</span></td>
-                                    <td colspan="">Age: <span>{{insurance.0.age}}Y</span></td>
+                                    <td colspan="">ID.Card No.: <span>{{firstElement insurance 0 "primary_card_number"}}</span></td>
+                                    <td colspan="">Sex: <span>{{firstElement insurance 0 "sex"}}</span></td>
+                                    <td colspan="">Age: <span>{{firstElement insurance 0 "age"}}Y</span></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">Policy Holder: <span>{{insurance.0.policyholder}}</span></td>
-                                    <td colspan="1">Policy Number: <span>{{insurance.0.primary_policy_num}}</span></td>
+                                    <td colspan="2">Policy Holder: <span>{{firstElement insurance 0 "policyholder"}}</span></td>
+                                    <td colspan="1">Policy Number: <span>{{firstElement insurance 0 "primary_policy_num"}}</span></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">Expiry Date: <span>{{insurance.0.primary_effective_end_date}}</span>
+                                    <td colspan="2">Expiry Date: <span>{{firstElement insurance 0 "primary_effective_end_date"}}</span>
                                     </td>
-                                    <td colspan="1">Class: <span>{{insurance.0.class}}</span></td>
+                                    <td colspan="1">Class: <span>{{firstElement insurance 0 "class"}}</span></td>
                                 </tr>
                                 <tr>
-                                    <td colspan="3">Approval: <span>{{insurance.0.approval}}</span></td>
+                                    <td colspan="3">Approval: <span>{{firstElement insurance 0 "approval"}}</span></td>
 
                                 </tr>
                             </tbody>
