--- a/client/src/Components/Inventory/InvRequisitionEntry/InvRequisitionEntry.css
+++ b/client/src/Components/Inventory/InvRequisitionEntry/InvRequisitionEntry.css
@@ -1,5 +1,5 @@
 .hptl-phase1-requisition-form {
-  min-height: 80vh;
+  min-height: 74vh;
   padding-bottom: 60px; }
   .hptl-phase1-requisition-form .form-details {
     padding: 5px;
@@ -12,3 +12,5 @@
   .hptl-phase1-requisition-form .go-button {
     cursor: pointer;
     margin-top: 2.5vh; }
+  .hptl-phase1-requisition-form #REQ_details .ReactTable {
+    max-height: 50vh !important; }
