--- a/AlgaehReporting/algaeh_report_tool/templates/haematologyReport.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/haematologyReport.hbs
@@ -9,7 +9,7 @@
           </tr>
           <tr>
               <td><label>اسم المريض / Patient Name</label></td>
-              <td>: <span>{{header.patient_name}}</span></td>
+              <td><span>{{header.patient_name}}</span></td>
 
           </tr>
           <tr>
@@ -21,6 +21,7 @@
   </section>
   <section>
        <h2><span>Bill Details</span></h2>
+
        <table class="tableForData" cell-padding="0">
            <thead>
                <tr>
@@ -33,7 +34,11 @@
            </thead>
            <tbody>
 
-           {{#each detail}}
+           {{#each details}}
+           <tr>
+             <td colspan="5" class="tableSubHdg">{{firstElement groupDetail 0 "investigation_name"}}</td>
+           </tr>
+           {{#each groupDetail}}
                <tr>
                     <td>{{analyte_name}}</td>
                     <td>{{result}}</td>
@@ -41,6 +46,7 @@
                     <td>{{normal_low }}-{{normal_high}}</td>
                     <td>{{critical_low}}-{{critical_high}}</td>
                 </tr>
+                {{/each}}
               {{/each}}
            </tbody>
        </table>
