RCm and clinical and radiology points done

--- a/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
@@ -214,8 +214,7 @@
                                                 <tr>
                                                     <th>Code</th>
                                                     <th>Description/Service</th>
-                                                    <th>Type</th>
-                                                    <th>Quantity</th>
+                                                    <th>Teeth Number</th>
                                                     <th>Cost</th>
                                                 </tr>
                                             </thead>
@@ -224,8 +223,7 @@
                                                 <tr>
                                                     <td>{{service_code}}</td>
                                                     <td>{{service_name}}</td>
-                                                    <td>{{service_type}}</td>
-                                                    <td>{{service_quantity}}</td>
+                                                    <td>{{teeth_number}}</td>
                                                     <td>{{service_net_amout}}</td>
                                                 </tr>
                                                 {{/each}}
