Updated Clinical Desk UI as per the change requested.

--- a/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.scss
+++ b/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.scss
@@ -24,7 +24,8 @@
   #LabTestResult,
   #LabTestName {
     .ReactTable {
-      max-height: 28vh !important;
+      max-height: 37vh !important;
+      margin-bottom: 15px;
     }
   }
 }
