--- a/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.scss
+++ b/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.scss
@@ -22,7 +22,8 @@
   }
   #radioResultGrid {
     .ReactTable {
-      height: 28vh !important;
+      max-height: 37vh !important;
+      margin-bottom: 15px;
     }
   }
 }
