--- a/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.css
+++ b/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.css
@@ -15,4 +15,5 @@
     border-right: 1px solid #e6e6e6; }
   .hptl-phase1-lab-result-form #LabTestResult .ReactTable,
   .hptl-phase1-lab-result-form #LabTestName .ReactTable {
-    max-height: 28vh !important; }
+    max-height: 37vh !important;
+    margin-bottom: 15px; }
