--- a/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.css
+++ b/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.css
@@ -14,4 +14,5 @@
   .hptl-phase1-rad-result-form td {
     border-right: 1px solid #e6e6e6; }
   .hptl-phase1-rad-result-form #radioResultGrid .ReactTable {
-    height: 28vh !important; }
+    max-height: 37vh !important;
+    margin-bottom: 15px; }
