--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -29,15 +29,15 @@
 .pain_slider {
   margin: 0;
   margin-top: 10px;
-  background: #f2f2f2;
-  border: 1px solid #c1c1c1;
+  background: lighten($color-black, 98%);
+  border: 1px solid lighten($color-black, 95%);
   padding-bottom: 8px;
 }
 .complain-box {
   .Select-placeholder {
     width: 100%;
     padding: 0 5px;
-    border: 1px solid #c1c1c1;
+    border: 1px solid lighten($color-black, 95%);
     border-radius: 5px 5px 0 0;
   }
   .displayInlineBlock {
@@ -61,8 +61,8 @@
 }
 
 .grid-section {
-  background: #ffff;
-  border: 1px solid #d3d3d3;
+  background: $color-white;
+  border: 1px solid lighten($color-black, 90%);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
@@ -74,49 +74,70 @@
     }
   }
 }
-.algaeh-col-3 {
-  width: 25%;
+.algaeh-col-4 {
+  width: 33%;
   margin-right: 15px;
   margin-left: 15px;
 }
-.algaeh-col-8 {
-  width: calc(73% - 65px);
+.algaeh-col-7 {
+  width: calc(64% - 65px);
   margin-right: 10px;
 }
 .algaeh-fixed-right-menu {
   position: relative;
-  width: 45px;
+  width: 51px;
+  z-index: 9;
   .rightActionIcon {
     position: fixed;
     list-style: none;
     margin: 0;
     padding: 0;
     width: 45px;
-    float: right;
-    right: 0;
+    left: 0;
     li {
+      position: relative;
       list-style: none;
       margin: 0 0 5px 0;
       padding: 0;
       background: $color-white;
       font-size: 1.5rem;
-      border-radius: 7px 0 0 7px;
+      border-radius: 0 7px 7px 0;
       text-align: center;
       width: 45px;
       line-height: 45px;
       height: 45px;
-      /* float: right; */
       display: block;
+      span {
+        display: none;
+        background: $primary-color;
+        color: $color-white;
+        font-size: 0.8rem;
+        padding: 5px;
+        border-radius: 0 5px 5px 0;
+        text-align: center;
+        position: absolute;
+        left: 45px;
+        height: 22px;
+        line-height: 1;
+        top: 12px;
+        white-space: nowrap;
+      }
       &:hover {
         color: $color-white;
         background: $primary-color;
         cursor: pointer;
         i {
-          color: lighten($color-black, 50%);
+          color: $color-white !important;
           &:hover {
             color: $color-white;
           }
         }
+        span {
+          display: block;
+        }
+      }
+      i {
+        color: lighten($color-black, 40%) !important;
       }
     }
   }
