--- a/client/src/index.css
+++ b/client/src/index.css
@@ -350,11 +350,10 @@
     color: #8775a7;
     font-weight: 400; }
   :global .caption-subject {
-    color: #666;
-    font-size: 1.2rem;
-    font-weight: normal;
-    line-height: 26px;
-    margin-bottom: 0; }
+    color: #4d4d4d;
+    font-size: 1.1rem;
+    font-weight: bold;
+    line-height: 26px; }
   :global .caption-helper {
     padding: 0;
     margin: 0;
