--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -540,11 +540,10 @@
   }
 
   .caption-subject {
-    color: #666;
-    font-size: 1.2rem;
-    font-weight: normal;
+    color: lighten($color-black, 30%);
+    font-size: 1.1rem;
+    font-weight: bold;
     line-height: 26px;
-    margin-bottom: 0;
   }
 
   .caption-helper {
