--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -653,7 +653,7 @@ input.autoselect-input {
   color: #616161; }
 
 textarea {
-  font-size: 0.8em !important;
+  font-size: 0.9rem !important;
   padding: 8px 6px 7px !important;
   border: 1px solid #d3d3d3 !important;
   border-radius: 4px !important;
