--- a/client/src/index.css
+++ b/client/src/index.css
@@ -330,10 +330,10 @@
     margin: -5px -15px 0;
     min-height: 35px;
     border-bottom: 1px dashed #eee;
-    margin-bottom: 5px; }
+    margin-bottom: 5px;
+    background: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%); }
     :global .portlet-title .caption {
       float: left;
-      display: inline-block;
       line-height: 18px; }
     :global .portlet-title .center {
       text-align: center; }
