--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -501,10 +501,9 @@
     min-height: 35px;
     border-bottom: 1px dashed #eee;
     margin-bottom: 5px;
+    background: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%);
     .caption {
       float: left;
-      display: inline-block;
-
       line-height: 18px;
     }
     .center {
