--- a/client/src/Components/PatientProfile/Summary/summary.scss
+++ b/client/src/Components/PatientProfile/Summary/summary.scss
@@ -1,10 +1,8 @@
 #patientSummary {
-  
   line-height: 1.3rem;
   color: #3d3d3d;
   margin-top: 1rem;
   .card-header {
-    
     padding: 0.5rem;
     font-weight: 600;
   }
@@ -13,7 +11,6 @@
     padding: 0.3rem 0.5rem;
   }
   p {
-    
     margin-bottom: 0.3rem;
   }
 
@@ -53,5 +50,10 @@
       margin-right: 3px;
       margin-top: 6px;
     }
+  }
+  .table-primary,
+  .table-primary > td,
+  .table-primary > th {
+    background: #defffc;
   }
 }
