--- a/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
@@ -194,7 +194,8 @@
                                         </table>
                                     </td>
                                     <td style="width: 30%">
-                                        <img src="{{imageSource 'images/dcaf_Dental_chart.png'}}" />
+                                        <img className="dcaf_Dental_chart"
+                                            src="{{imageSource 'images/dcaf_Dental_chart.png'}}" />
                                     </td>
                                 </tr>
                             </tbody>
