--- a/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
+++ b/AlgaehReporting/algaeh_report_tool/templates/dcaf.hbs
@@ -100,16 +100,16 @@
                     <td colspan="2" class="otherDetails">
                         <table class="innerTable">
                             <tbody>
-                                <tr>
-                                    <td colspan="7"><b> To be completed by the Dentist:</b>
-                                    </td>
-                                </tr>
+
                                 <tr>
                                     <td>
                                         <table>
                                             <tbody>
 
-
+                                                <tr>
+                                                    <td><b> To be completed by the Dentist:</b>
+                                                    </td>
+                                                </tr>
                                                 <tr>
                                                     <td>Duration Of Illness:
                                                         <span>{{header.patient_duration_of_illness}} (days)</span></td>
@@ -194,7 +194,7 @@
                                         </table>
                                     </td>
                                     <td style="width: 30%">
-                                        <img className="dcaf_Dental_chart"
+                                        <img class="dcaf_Dental_chart"
                                             src="{{imageSource 'images/dcaf_Dental_chart.png'}}" />
                                     </td>
                                 </tr>
