--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -100,12 +100,8 @@
       margin: 0 0 5px 0;
       padding: 0;
       background: $color-white;
-      font-size: 1.5rem;
       border-radius: 0 7px 7px 0;
       text-align: center;
-      width: 45px;
-      line-height: 45px;
-      height: 45px;
       display: block;
       span {
         display: none;
@@ -138,6 +134,8 @@
       }
       i {
         color: lighten($color-black, 40%) !important;
+        font-size: 1.5rem;
+        padding: 10px;
       }
     }
   }
