--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
@@ -40,14 +40,15 @@
       padding: 2px 10px;
       margin: 0;
       margin-bottom: 7px;
-      border-radius: 7px; }
+      border-radius: 7px;
+      font-size: 0.8rem; }
     .timeline .content ul.vitals-box {
       margin: 0;
       padding: 0;
       list-style: none; }
       .timeline .content ul.vitals-box li.each-vitals-box {
         margin: 5px 0 0;
-        padding: 5px 10px;
+        padding: 2px 6px 0;
         list-style: none;
         border: 1px solid #41bcaf;
         border-radius: 5px;
@@ -55,9 +56,13 @@
         .timeline .content ul.vitals-box li.each-vitals-box p {
           margin: 0;
           padding: 0;
-          margin-bottom: 5px;
-          text-transform: uppercase; }
+          text-transform: uppercase;
+          font-size: 0.8rem; }
+        .timeline .content ul.vitals-box li.each-vitals-box span.vitalsText {
+          font-size: 1rem;
+          font-weight: bold; }
         .timeline .content ul.vitals-box li.each-vitals-box span:last-child {
+          font-size: 0.8rem;
           text-align: right;
           margin-left: 5px; }
 
