--- a/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
+++ b/client/src/Components/PatientProfile/PatientHistory/PatientHistory.scss
@@ -44,7 +44,6 @@
   .panel {
     width: 100%;
     background-color: #efefef;
-
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.2s ease-out;
@@ -90,4 +89,10 @@
   height: 30vh;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+.historyH5 {
+  margin: 0;
+  padding: 5px;
+  background: #f9f9f9 !important;
+  color: #444;
 }
