--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -514,6 +514,7 @@
           text-align: center;
           .opPatientStatus {
             display: block;
+            line-height: 25px;
           }
           .newVisit {
             color: #ff8800;
