--- a/client/src/Components/NurseWorkbench/nurse_workbench.css
+++ b/client/src/Components/NurseWorkbench/nurse_workbench.css
@@ -60,7 +60,8 @@
       display: inline-block;
       text-align: center; }
       .nurse_workbench .opPatientList .opList li .op-sec-3 .opPatientStatus {
-        display: block; }
+        display: block;
+        line-height: 25px; }
       .nurse_workbench .opPatientList .opList li .op-sec-3 .newVisit {
         color: #ff8800; }
       .nurse_workbench .opPatientList .opList li .op-sec-3 .followUp {
