--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
@@ -118,6 +118,8 @@
     .popRightDiv {
       min-height: 30vh;
       max-height: 80vh;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
   }
 
