--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -924,7 +924,8 @@
       .popRightDiv {
         min-height: 30vh;
         max-height: 70vh;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         padding: 15px;
       }
     }
@@ -1084,7 +1085,8 @@
       .popRightDiv {
         min-height: 30vh;
         max-height: 70vh;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         padding: 15px;
       }
       label {
