--- a/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.scss
+++ b/client/src/Components/InsuranceClaims/RCMWorkbench/ValidateBills/ValidateBills.scss
@@ -1,11 +1,15 @@
-#ClaimGrid_Cntr,
+#ClaimGrid_Cntr {
+  .ReactTable {
+    max-height: 20vh !important;
+  }
+}
 #invoiceDetailGrid_Cntr {
   .ReactTable {
-    max-height: 31vh !important;
+    max-height: 41vh !important;
   }
 }
 #icd_bill_Grid {
   .ReactTable {
-    max-height: 18vh !important;
+    max-height: 27vh !important;
   }
 }
