--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -118,12 +118,13 @@
   .fa-eye,
   .fa-plus,
   .fa-thumbs-up,
-  .fa-thumbs-down {
+  .fa-thumbs-down,
+  .fa-file-medical-alt,
+  .fa-clipboard-check {
     cursor: pointer;
     border: 1px solid lighten($primary-color, 10%);
     height: 28px;
     border-radius: 100%;
-
     width: 28px;
     display: inline-block;
     text-align: center;
@@ -151,7 +152,9 @@
   .fa-prescription:hover,
   .fa-arrow-right:hover,
   .fa-plus:hover,
-  .fa-thumbs-up:hover {
+  .fa-thumbs-up:hover,
+  .fa-file-medical-alt:hover,
+  .fa-clipboard-check:hover {
     background: $primary-color;
     color: #fff;
   }
