--- a/client/src/index.css
+++ b/client/src/index.css
@@ -647,7 +647,8 @@
       :global .algaeh-modal .popupInner .popRightDiv {
         min-height: 30vh;
         max-height: 70vh;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         padding: 15px; }
     :global .algaeh-modal .popupFooter {
       border-top: 1px dashed #e0e0e0;
@@ -776,7 +777,8 @@
       :global .algaeh-modal-Ar .popupInner .popRightDiv {
         min-height: 30vh;
         max-height: 70vh;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
         padding: 15px; }
       :global .algaeh-modal-Ar .popupInner .toggle-section .nav {
         padding: 0;
